# C-Course

./: README.md
Workspaces/CourseSection10/: CourseSection10.workspace  compile_commands.json
Workspaces/CourseSection10/.codelite/: CourseSection10-smithfu.tags  CourseSection10.session
Workspaces/CourseSection10/Assignment/: Assignment.mk  Assignment.project  main.cpp
Workspaces/CourseSection10/CPPStrings/: CPPStrings.mk  CPPStrings.project  main.cpp
Workspaces/CourseSection10/CStyleStrings/: CStyleStrings.mk  CStyleStrings.project  main.cpp
Workspaces/CourseSection10/Challenge/: Challenge.mk  Challenge.project  main.cpp
Workspaces/CourseSection11/: CourseSection11.workspace  Makefile  compile_commands.json
Workspaces/CourseSection11/OpenCVtest/: CMakeLists.txt  OpenCVtest.mk  OpenCVtest.project  main.cpp
Workspaces/CourseSection12/: CourseSection12.workspace  Makefile  compile_commands.json
Workspaces/CourseSection13/: CourseSection13.workspace  Makefile  compile_commands.json
Workspaces/CourseSection14/: CourseSection14.workspace  Makefile  compile_commands.json
Workspaces/CourseSection7/: CourseSection7.workspace  compile_commands.json
Workspaces/CourseSection8/: CourseSection8.workspace  Makefile  compile_commands.json
Workspaces/CourseSection9/: CourseSection9.workspace  Makefile  compile_commands.json
Workspaces/OpenCVWorkspaces/: Makefile  OpenCVWorkspaces.workspace  compile_commands.json
Workspaces/Workspaces1/: Makefile  Workspaces1.workspace  compile_commands.json
Workspaces/workspacesEx/: workspacesEx.workspace
(+1140 files in other folders)
