cmake_minimum_required(VERSION 3.0)
project(OpenCVExample)


# Find OpenCV package
find_package(OpenCV REQUIRED)


# Include directories from OpenCV
indlucd_directories(${OpenCV_INCLUDE_DIRS})


# Create an executable
add_executable(OpenCVExample main.cpp)

# Link OpenCV libraries
target_link_libraries(OpenCVExample ${OpenCV_LIBS})